--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,13 @@
+@import "pager";
+
 body {
     background-color: #eee;
+}
+
+.todo {
+    &__element {
+        &--done {
+            background-color: #dfd;
+        }
+    }
 }
